--- a/src/estilo.css
+++ b/src/estilo.css
@@ -8,20 +8,15 @@
     list-style: none;
 }
 
-.sentence::after{
-    content: '';
-    display: inline-block;
-    width: 4px;
-    height: 30px;
-    background: red;
-    animation: pisca .6s ease-in-out infinite;
+.right{
+    text-align: center;
+    color:rgb(1, 211, 1);
 }
 
-@keyframes pisca {
-    from{
-        opacity: 0;
-    }
-    to{
-        opacity: 1;
-    }
+.FindWords{
+    text-align: center;
+}
+
+.FindWords span{
+    color: red;
 }
